RoutineItemRequestDTO의 isFlexibleTime 필드가 존재하지만,인식을 못해 Jackson 어노테이션 추가